src/objects/Milestone1_Task__c.object
<CustomObject>
    <description>AstrumPM - An activity that has hours, budget, and is assigned to a User.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Project_Milestone__r.Project__r.Sales_Order__r.AccountId__r.AccountNumber</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The user responsible for completing the task. Defaults to current user if left blank.</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Tasks_Assigned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blocked_Reason__c</fullName>
        <inlineHelpText>If blocked, why?</inlineHelpText>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this task blocked for some reason?</inlineHelpText>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <inlineHelpText>Classify this task as appropriate for your use.</inlineHelpText>
        <label>Class</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Hoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complete_Date_Days_From_Project_Creation__c</fullName>
        <description>This task&apos;s Complete Date is how many DAYS since its Project was created?</description>
        <formula>Complete_Date__c - DATEVALUE( Project_Milestone__r.Project__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This task&apos;s Complete Date is how many DAYS since its Project was created?</inlineHelpText>
        <label>Complete Date Days From Project Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complete_Date__c</fullName>
        <label>Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The status of this task. A task is either in-complete or complete.</inlineHelpText>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Late_Formula__c</fullName>
        <formula>IF(!isnull(Complete_Date__c), Complete_Date__c - Due_Date__c, Today() -  Due_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Late Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Late__c</fullName>
        <inlineHelpText>How many days late is this task?</inlineHelpText>
        <label>Days Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>The general description of the task. For example, what is the purpose of the task.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date_Days_From_Project_Creation__c</fullName>
        <description>This task&apos;s Due Date is how many DAYS since its Project was created?</description>
        <formula>Due_Date__c -  DATEVALUE(Project_Milestone__r.Project__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This task&apos;s Due Date is how many DAYS since its Project was created?</inlineHelpText>
        <label>Due Date Days From Project Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>The date this task is due to be completed. Defaults to milestone due date if left blank.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_GUID__c</fullName>
        <description>This field is used to track Email for a reply to email chain.</description>
        <externalId>true</externalId>
        <label>Email GUID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Expense__c</fullName>
        <inlineHelpText>The estimated amount of expenses which will be incurred during the task.</inlineHelpText>
        <label>Estimated Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <inlineHelpText>The estimated time to complete the task.</inlineHelpText>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expense_Balance__c</fullName>
        <formula>Estimated_Expense__c - Total_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as estimated expense - total expense</inlineHelpText>
        <label>Expense Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_Balance__c</fullName>
        <formula>Estimated_Hours__c - Total_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as estimated hours - total hours</inlineHelpText>
        <label>Hours Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index_Helper__c</fullName>
        <formula>Assigned_To__r.FirstName &amp; &apos; &apos; &amp; Assigned_To__r.LastName &amp; &apos; &apos; &amp; Project_Milestone__r.Project__r.Name &amp; &apos; &apos; &amp; Project_Milestone__r.Name &amp; &apos; complete:&apos; &amp; IF(Complete__c, &apos;yes&apos;, &apos;no&apos;) &amp; &apos; &apos; &amp; Name</formula>
        <label>Index Helper</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <externalId>true</externalId>
        <label>Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Email_Received__c</fullName>
        <description>Date Time the last email was sent to this task.</description>
        <inlineHelpText>The date the last email was attached to this task. A task can be created via an email, and additional emails can be attached to the task in the notes section.</inlineHelpText>
        <label>Last Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Milestone_Grandparent__c</fullName>
        <formula>if (
 Project_Milestone__r.Parent_Milestone__c != null, 
 Project_Milestone__r.Parent_Milestone__r.Name , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Grandparent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Task is NOT REQUIRED for this project</description>
        <inlineHelpText>This Task is NOT REQUIRED for this project</inlineHelpText>
        <label>Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <formula>if ( Complete__c, &apos;Complete&apos;,
  if ( and( Days_Late_Formula__c &gt; 0,  Blocked__c  ), &apos;Late &amp; Blocked&apos;,
    if (Days_Late_Formula__c &gt; 0,  &apos;Late&apos;,
      if(Blocked__c, &apos;Blocked &apos; ,  &apos;Open&apos;) 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated field indicating if the task is complete, open, late, blocked or late and blocked.</inlineHelpText>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <formula>Project_Milestone__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>This is the priority of the task. 0,1,2,3 or 4.</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectId__c</fullName>
        <formula>Project_Milestone__r.Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectStatus__c</fullName>
        <formula>TEXT(Project_Milestone__r.Project__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Job_Id__c</fullName>
        <description>Project Job Id</description>
        <formula>Project_Milestone__r.Project__r.Job_Id__c</formula>
        <inlineHelpText>Project Job Id</inlineHelpText>
        <label>Project Job Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Milestone__c</fullName>
        <inlineHelpText>The milestone that this task is assigned to.</inlineHelpText>
        <label>Milestone</label>
        <referenceTo>Milestone1_Milestone__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>HYPERLINK(Project_Milestone__r.Project__c, Project_Milestone__r.Project__r.Name,&apos;_self&apos;)</formula>
        <inlineHelpText>A link to the Project which this task is included in via its milestone.</inlineHelpText>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Documentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Documentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_ID__c</fullName>
        <inlineHelpText>Unique number for each task and across all projects.</inlineHelpText>
        <label>Short ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>When should this task start by?</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Number__c</fullName>
        <inlineHelpText>Unique number for each task and across all projects.</inlineHelpText>
        <label>Task Short ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>To_Be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Expense__c</fullName>
        <inlineHelpText>Calculated from all child expense records</inlineHelpText>
        <label>Total Expense</label>
        <summarizedField>Milestone1_Expense__c.Amount__c</summarizedField>
        <summaryForeignKey>Milestone1_Expense__c.Project_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <inlineHelpText>Calculated from all child time records</inlineHelpText>
        <label>Total Hours</label>
        <summarizedField>Milestone1_Time__c.Hours__c</summarizedField>
        <summaryForeignKey>Milestone1_Time__c.Project_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Workflow_Key__c</fullName>
        <label>Workflow Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project_Milestone__c</columns>
        <columns>Project__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_Late__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CannotBeBlockedIfComplete</fullName>
        <active>true</active>
        <errorConditionFormula>if (And ( Blocked__c == true, Complete__c == true), true, false)</errorConditionFormula>
        <errorDisplayField>Blocked__c</errorDisplayField>
        <errorMessage>You cannot mark a completed task as blocked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotBeCompleteIfBlocked</fullName>
        <active>true</active>
        <errorConditionFormula>if (and ( Complete__c == true,  Blocked__c ==true), true, false)</errorConditionFormula>
        <errorDisplayField>Complete__c</errorDisplayField>
        <errorMessage>You cannot complete a task marked as blocked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Complete_Box_Required_if_Complete_Date</fullName>
        <active>true</active>
        <description>Complete box required if Complete Date Given</description>
        <errorConditionFormula>and (!isnull(Complete_Date__c ), !Complete__c)</errorConditionFormula>
        <errorDisplayField>Complete__c</errorDisplayField>
        <errorMessage>Complete box is required if Complete Date is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Complete_Date_Cannot_Be_In_the_Future</fullName>
        <active>true</active>
        <description>Complete Date Must Be Today Or In The Past</description>
        <errorConditionFormula>Complete_Date__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Complete_Date__c</errorDisplayField>
        <errorMessage>Complete Date Cannot Be In The Future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Complete_Date_Required_if_Complete_Check</fullName>
        <active>true</active>
        <description>Complete date is required if the complete box is checked</description>
        <errorConditionFormula>and (ISNULL(Complete_Date__c),  Complete__c)</errorConditionFormula>
        <errorDisplayField>Complete_Date__c</errorDisplayField>
        <errorMessage>Complete date is required if the complete box is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_Greater_Than_Milestone_Deadline</fullName>
        <active>false</active>
        <errorConditionFormula>Due_Date__c &gt;  Project_Milestone__r.Deadline__c</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>Due Date should be smaller than Milestone Deadline</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_Smaller_Than_Milestone_Kickoff</fullName>
        <active>false</active>
        <errorConditionFormula>Due_Date__c &lt;  Project_Milestone__r.Kickoff__c</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>Due Date should be greater than Milestone Kickoff Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_be_blank_if_not_blocked</fullName>
        <active>true</active>
        <errorConditionFormula>IF( and(Blocked__c == false, len( Blocked_Reason__c ) &gt; 0) , True, False)</errorConditionFormula>
        <errorDisplayField>Blocked_Reason__c</errorDisplayField>
        <errorMessage>Must be blank if &quot;blocked&quot; is not checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_not_be_blank_if_blocked</fullName>
        <active>true</active>
        <errorConditionFormula>IF( and(Blocked__c == true, len( Blocked_Reason__c ) == 0) , True, False)</errorConditionFormula>
        <errorDisplayField>Blocked_Reason__c</errorDisplayField>
        <errorMessage>If this task is blocked you must enter a reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_More_Than_Due_Date</fullName>
        <active>false</active>
        <errorConditionFormula>if (and(!isblank(Start_Date__c), !isblank(Due_Date__c)), true, false)</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>Due Date should be greater than Start Date</errorMessage>
    </validationRules>
</CustomObject>